--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: clojure
-
 branches:
   only:
   - master
-
 jdk: oraclejdk8
+before_install:
+- openssl aes-256-cbc -K $encrypted_50465b8dd674_key -iv $encrypted_50465b8dd674_iv
+  -in profiles.clj.enc -out profiles.clj -d
+- mkdir -p ~/.lein && cp profiles.clj ~/.lein/profiles.clj
+
+
+script: GIT_IS_MASTER=`git branch --contains HEAD | grep -q master ; echo $?` ./build-and-deploy.sh
